Mon Nov  4 10:08:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (TH_EXEC_TAG, TH_JUMP_TAG): get rid of undefined
	  behavior of setjmp() in rhs of assignment expression.
	  [ISO/IEC 9899:1999] 7.13.1.1

Sun Nov  3 23:06:51 2013  Tanaka Akira  <akr@fsij.org>

	* sample/test.rb: Make temporary file names unique.

Sun Nov  3 20:41:17 2013  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc: Wrap definitions by TestXMLRPC module.

Sun Nov  3 20:23:38 2013  Tanaka Akira  <akr@fsij.org>

	* test/xmlrpc/webrick_testing.rb (stop_server): Don't try to shutdown
	  the server if the server is not started.

Sun Nov  3 09:35:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_feature_p): deal with default loadable suffixes.

	* load.c (load_lock): initialize statically linked extensions.

	* load.c (search_required, rb_require_safe): deal with statically
	  linked extensions.

	* load.c (ruby_init_ext): defer initalization of statically linked
	  extensions until required actually.  [Bug #8883]

Sat Nov  2 15:14:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::LogDevice::LogDeviceMutex#lock_shift_log):
	  open file can't be removed or renamed on Windows.  [ruby-dev:47790]
	  [Bug #9046]

	* test/logger/test_logger.rb (TestLogDevice#run_children): don't use
	  fork.

Sat Nov  2 07:08:43 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/logger.rb: Inter-process locking for log rotation
	  Current implementation fails log rotation on multi process env.
	  by sonots <sonots@gmail.com>
	  https://github.com/ruby/ruby/pull/428 fix GH-428 [Bug #9046]

Fri Nov  1 23:24:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (wmap_mark_map): mark live objects only, but delete zombies.
	  [ruby-dev:47787] [Bug #9069]

Fri Nov  1 22:45:54 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (struct heap_page, gc_page_sweep, gc_sweep): Refactoring for
	  performance. Add before_sweep condition to heap_page structure.
